--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
-version: '2'
+version: '3'
 services:
   base: &base
-    image: ruby:2.4.0
-    working_dir: /home/app/danica
+    image: danica
+    working_dir: /home/app/app
     volumes:
-      - .:/home/app/danica
-      - danica_gems_2_4_0:/usr/local/bundle
+      - .:/home/app/app
 
-  #################### CONTAINERS ####################
+  base_build:
+    <<: *base
+    build: .
+    command: echo done
 
   danica:
     <<: *base
     container_name: danica
-    command: /bin/bash -c 'bundle install && bundle exec rspec'
+    depends_on: [base_build]
+    command: /bin/bash -c 'rspec'
 
-volumes:
-  danica_gems_2_4_0:
+  test_all:
+    <<: *base
+    depends_on: [base_build]
+    command: /bin/bash -c 'rspec && yard && rake yardstick_measure && rake verify_measurements'
