Update circleci file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,26 @@
 version: 2
+workflows:
+  version: 2
+  test-and-build:
+    jobs:
+      - test:
+          filters:
+            tags:
+              only: /.*/
+      - build-and-release:
+          requires: [test]
+          filters:
+            tags:
+              only: /\d+\.\d+\.\d+/
+            branches:
+              only:
+                - master
 jobs:
-  build:
+  test:
     docker:
-      - image: darthjee/circleci_ruby_gems:0.1.0
+      - image: darthjee/circleci_ruby_gems:0.6.0
+        environment:
+          PROJECT: danica
     steps:
       - checkout
       - run:
@@ -24,5 +42,30 @@ jobs:
           name: Yardstick coverage check
           command: bundle exec rake verify_measurements
       - run:
+          name: Check version documentation
+          command: check_readme.sh
+      - run:
           name: Rubycritcs check
-          command: scripts/rubycritic.sh
+          command: rubycritic.sh
+      - run:
+          name: Check unit tests
+          command: check_specs
+  build-and-release:
+    docker:
+      - image: darthjee/circleci_ruby_gems:0.6.0
+        environment:
+          PROJECT: danica
+    steps:
+      - checkout
+      - run:
+          name: Bundle Install
+          command: bundle install
+      - run:
+          name: Signin
+          command: build_gem.sh signin
+      - run:
+          name: Build Gem
+          command: build_gem.sh build
+      - run:
+          name: Push Gem
+          command: build_gem.sh push
