--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,8 @@ require: rubocop-rspec
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 3.3
+  NewCops: enable
 
 Metrics/BlockLength:
   Exclude:
