--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,12 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - checks:
+          filters:
+            tags:
+              only: /.*/
       - build-and-release:
-          requires: [test]
+          requires: [test, checks]
           filters:
             tags:
               only: /\d+\.\d+\.\d+/
@@ -18,26 +22,30 @@ workflows:
 jobs:
   test:
     docker:
-      - image: darthjee/circleci_ruby_250:0.7.0
+      - image: darthjee/circleci_ruby_331:1.0.2
         environment:
           PROJECT: danica
     steps:
       - checkout
       - run:
-          name: Prepare Coverage Test Report
-          command: cc-test-reporter before-build
-      - run:
           name: Bundle Install
           command: bundle install
       - run:
           name: RSpec
-          command: bundle exec rspec
+          command: COVERAGE_JSON=true bundle exec rspec
+  checks:
+    docker:
+      - image: darthjee/circleci_ruby_331:1.0.2
+        environment:
+          PROJECT: danica
+    steps:
+      - checkout
+      - run:
+          name: Bundle Install
+          command: bundle install
       - run:
           name: Rubocop
           command: rubocop
-      - run:
-          name: Coverage Test Report
-          command: cc-test-reporter after-build --exit-code $?
       - run:
           name: Yardstick coverage check
           command: bundle exec rake verify_measurements
@@ -52,7 +60,7 @@ jobs:
           command: check_specs
   build-and-release:
     docker:
-      - image: darthjee/circleci_ruby_250:0.7.0
+      - image: darthjee/circleci_ruby_331:1.0.2
         environment:
           PROJECT: danica
     steps:
